Update section 5.5's heading

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -253,6 +253,7 @@
 			%\end
 		
 		\subsection{Domain Model}\label{subsec:domainmodel}
+		The Domain model includes the UML diagrams in terms of Class diagrams for the current system.\\ Each model includes the objects and attributes of that specific class and any relationships associated with that class.\\
 			%\begin{figure}[h]
 			%\includegraphics[width=4in]{imagename}
 			%\caption{Figure information}
