Updated section 5.4 and 5.5 descriptions

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -408,12 +408,14 @@
 			%\end
 	
 		\subsection{Process Specifications}\label{subsec:processspecification}
+		Certain use cases require further information with regards to their function.\\ These use cases are specified further by means of process specification.
 			%\begin{figure}[h]
 			%\includegraphics[width=4in]{imagename}
 			%\caption{Figure information}
 			%\end
 		
 		\subsection{Domain Model}\label{subsec:domainmodel}
+		The domain model is described in terms of class diagram.// Class diagrams contain information on the current class such as attributes and relationships to other classes.
 			%\begin{figure}[h]
 			%\includegraphics[width=4in]{imagename}
 			%\caption{Figure information}
