Fixed formatting error

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -415,7 +415,7 @@
 			%\end
 		
 		\subsection{Domain Model}\label{subsec:domainmodel}
-		The domain model is described in terms of class diagram.// Class diagrams contain information on the current class such as attributes and relationships to other classes.
+		The domain model is described in terms of class diagram.\\ Class diagrams contain information on the current class such as attributes and relationships to other classes.
 			%\begin{figure}[h]
 			%\includegraphics[width=4in]{imagename}
 			%\caption{Figure information}
