Updated student numbers

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -38,13 +38,13 @@
 			\textsc{\large Created By:}\\
 			[2mm]
 			\large{
-				Claudio Da Silva\\
-				Arno Grobler\\
-				Dillon Heins\\
-				Charl Jansen Van Vuuren\\
-				Priscilla Madigoe\\
-				Bernhard Schuld\\
-				Keorapetse Shiko
+				Claudio Da Silva - 14205892\\
+				Arno Grobler - 14011396\\
+				Dillon Heins - 14035538\\
+				Charl Jansen Van Vuuren - 13054903\\
+				Priscilla Madigoe - 13049128\\
+				Bernhard Schuld - 10297902\\
+				Keorapetse Shiko - 12231992
 			}\\
 			[6cm]
 		\end{center}
