User sub-system user case prioritization - HoR complete

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -473,6 +473,38 @@
 						\end{itemize}
 					\end{itemize}
 					
+					\item \textbf{Search All Users in Research Group} \hfill \textit{Priority: Critical}
+					\begin{itemize}
+						\item The head of a research group should be able to search all of the users within their research group.
+						\item \textbf{Pre-conditions:}
+						\begin{itemize}
+							\item The user must be logged in.
+							\item The user must have the privileges associated with a Head of Research.
+							\item The user must be the Head of Research of the particular group which they are wanting to search.
+						\end{itemize}
+						\item \textbf{Post-conditions:}
+						\begin{itemize}
+							\item The user must have been able to view all of the users associated with their research group.
+							\item The action should be logged.
+						\end{itemize}
+					\end{itemize}
+					
+					\item \textbf{View All User Profiles in Research Group} \hfill \textit{Priority: Critical}
+					\begin{itemize}
+						\item A research group leader should be able to access the profiles and information associated with the users within their research group. In particular the Head of Research should be able to view all paper entries associated with each user.
+						\item \textbf{Pre-conditions:}
+						\begin{itemize}
+							\item The user must be logged in.
+							\item The user must have the privileges associated with a Head of Research.
+							\item The user must be the Head of Research of the particular group which they are wanting to view profiles of.
+						\end{itemize}
+						\item \textbf{Post-conditions:}
+						\begin{itemize}
+							\item The head of the research group can access and view all profile information (including paper entries) for each of the users associated with their research group.
+							\item The action should be logged.
+						\end{itemize}
+					\end{itemize}					
+					
 					\item \textbf{xxx} \hfill \textit{Priority: xxx}
 					\begin{itemize}
 						\item
