--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -584,7 +584,76 @@
 						\end{itemize}
 					\end{itemize}
 				\end{itemize}
-				
+			\subsubsection{Notification Sub-System}\label{subsubsec:notification}
+				Handles the adding and editing of notifications within the system, as well the process of creating and sending notifications to relevant users of the system.\\
+				[3mm]
+				\textbf{\large{User:}}
+				\begin{itemize}
+					\item \textbf{Set Paper Deadline} \hfill \textit{Priority: Important}
+					\begin{itemize}
+						\item Upon creating a paper entry a user must be able to set the deadline for when the paper needs to be published by.
+						\item \textbf{Pre-conditions:}
+						\begin{itemize}
+							\item The user must be logged in.
+							\item The user must be the author or a co-author of the paper which they would like to set the deadline for.
+						\end{itemize}
+						\item \textbf{Post-conditions:}
+						\begin{itemize}
+							\item A deadline will have been set and stored in the system. It will be associated with the particular paper on which it was set.
+							\item The action should be logged.
+						\end{itemize}
+					\end{itemize}
+					
+					\item \textbf{Edit Paper Deadline} \hfill \textit{Priority: Important}
+					\begin{itemize}
+						\item A user must be able to edit the deadline associated with their papers.
+						\item \textbf{Pre-conditions:}
+						\begin{itemize}
+							\item The user must be logged in.
+							\item The user must be the author or a co-author of the paper on which they are editing the deadline.
+							\item The paper must not have been terminated.
+						\end{itemize}
+						\item \textbf{Post-conditions:}
+						\begin{itemize}
+							\item The change in the deadline should reflect within the system and be associated with the paper on which it was set.
+							\item The action should be logged.
+						\end{itemize}
+					\end{itemize}									
+				\end{itemize}
+				\textbf{\large{System:}}
+				\begin{itemize}
+					\item \textbf{Send Deadline Notification} \hfill \textit{Priority: Important}
+					\begin{itemize}
+						\item The system must be able to notify an author as well as co-authors of a paper of the deadline for the paper.
+						\item \textbf{Pre-conditions:}
+						\begin{itemize}
+							\item A deadline must have been set for a paper.
+							\item The deadline must not have passed already.
+							\item The authors being notified must be associated with the paper the deadline has been set on.
+						\end{itemize}
+						\item \textbf{Post-conditions:}
+						\begin{itemize}
+							\item Authors of a particular paper are notified via the use of email as to what the deadline for the paper is.
+							\item The action should be logged.
+						\end{itemize}
+					\end{itemize}
+					
+					\item \textbf{Send Deadline Update Notification} \hfill \textit{Priority: Important}
+					\begin{itemize}
+						\item The system must be able to notify an author as well as co-authors of a paper when the deadline for a paper is updated.
+						\item \textbf{Pre-conditions:}
+						\begin{itemize}
+							\item A new deadline must have been set for a paper.
+							\item The deadline must not have passed already.
+							\item The authors being notified must be associated with the paper the deadline has been updated on.
+						\end{itemize}
+						\item \textbf{Post-conditions:}
+						\begin{itemize}
+							\item Authors of a particular paper are notified via the use of email as to what the updated deadline for the paper is.
+							\item The action should be logged.
+						\end{itemize}
+					\end{itemize}
+				\end{itemize}
 			
 		\subsection{Use Case/ Service Contracts}\label{subsec:servicecontracts}
 		Each use case is discussed in detail in this section
